src/objects/Medical_Facility_User__c.object
<CustomObject>
    <fields>
        <fullName>Medical_Facility__c</fullName>
        <label>Medical Facility</label>
        <referenceTo>Medical_Facility__c</referenceTo>
        <relationshipLabel>Medical Facility Users</relationshipLabel>
        <relationshipName>Medical_Facility_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Primary Onsite Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Medical_Facility_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Medical Facility User</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Medical Facility User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Facility Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>